--- a/front-end/static/css/main.css
+++ b/front-end/static/css/main.css
@@ -7,6 +7,8 @@ body {
     overflow: hidden;
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
 }
 
 #containerSvg {
@@ -60,4 +62,78 @@ body {
 
 .zoomoutbutton {
     position: absolute;
+}
+
+input {
+    margin-bottom: 5px;
+}
+
+input[type=text], input[type=number] {
+    width: 70px;
+    margin-left: 5px;
+}
+
+#editor_div {
+    position: absolute;
+    background-color: #f0f0f0;
+    top: 0;
+    left: 70%;
+    width: 30%;
+    height: 100vh;
+    z-index: 1;
+}
+
+#editor_div_title {
+    padding: 5px 0 0 5px;
+}
+
+#editor {
+    width: 100%;
+    height: 100%;
+}
+
+.menu {
+    background-color: #f0f0f0;
+    width: fit-content;
+    height: fit-content;
+    min-height: 100vh;
+    padding: 10px 0 10px 0;
+    text-align: center;
+}
+
+.add-edit-div {
+    text-align:right;
+}
+
+.add-edit {
+    padding: 10px 20% 5px 0;
+    background-color: #e0e0e0;
+    margin-bottom: 10px;
+}
+
+#upload_btn {
+    margin-right: 5px;
+    background-color: #d3d3d3;
+    color: black;
+    border: 1px solid rgb(133, 133, 133);
+}
+
+#upload_file {
+    width: 200px;
+}
+
+#upload_div {
+    padding: 0 10px 0 10px;
+}
+
+.btn {
+    margin-bottom: 5px;
+}
+
+.btn-group {
+    margin-bottom: 5px;
+}
+
+.button-row {
+    margin: 10px 0 5px 0;
 }
